--- a/Cafeteria Web Api/CafetreiaApi/CafetreiaApi/CafetreiaApi.csproj
+++ b/Cafeteria Web Api/CafetreiaApi/CafetreiaApi/CafetreiaApi.csproj
@@ -235,6 +235,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminOrdersController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
+    <Compile Include="Controllers\ChecksController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OrdersController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
@@ -269,6 +270,8 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
+    <Compile Include="Repository\ChecksRepository.cs" />
+    <Compile Include="Repository\IChecksRepository.cs" />
     <Compile Include="Repository\IMainRepository.cs" />
     <Compile Include="Repository\IOrderRepository.cs" />
     <Compile Include="Repository\IProductRepository.cs" />
